# Pinndorama

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/punctures_2d/: C002_70x70_w40d4.toml  C002_w40d4.toml  C002_w60d10.toml  C004_square_w40d4.toml
configs/punctures_2d_parametric/: P001_w40d4.toml
configs/punctures_3d/: C04.toml  C05.toml
configs/toy_problem_1d/: T001_w40d4.toml  T003_w40d4_first_order_endpoint.toml  T004_w40d4_xavier.toml  T005_w40d4_xavier_first_order_endpoint.toml
docs/: gpu-jax.md  reproducibility.md  technical_reference.tex
docs/solvers/: punctures_2d.md  punctures_2d_parametric.md  punctures_3d.md  toy_problem_1d.md
reference_solvers/: README.md
reference_solvers/nrpyelliptic/: README.md
reference_solvers/nrpyelliptic/READER_nrpyelliptic_conformally_flat/: Makefile  NRPYELL_binary_format.h  read_NRPYELL_binary.c
reference_solvers/nrpyelliptic/axisymmetric/: README.md
reference_solvers/nrpyelliptic/nrpyelliptic_conformally_flat_3D/: BHaH_defines.h  BHaH_function_prototypes.h  Makefile  (+9 more)
src/pinndorama/: __init__.py  _paths.py  _ssbroyden.py
tests/: conftest.py  test_boundary_losses.py  test_checkpoints.py  test_nrpy_reader.py  test_nrpy_solvers_build.py  test_publication_surface.py  test_punctures_2d_convergence_plot.py  test_punctures_2d_relative_l2_nrpy.py  test_reproducibility.py  test_solver_configs.py  test_symbolic_builders.py  test_toy_problem_1d.py  test_toy_problem_1d_pointwise_plot.py  test_training_smokes.py  test_vendored_nrpy.py  test_vendored_ssbroyden.py  test_warm_start.py
(+174 files in other folders)
